# zusi3tcp

./: .travis.yml  CMakeLists.txt  DumpFTD.vcxproj  LICENSE  Library.vcxitems  PfeilAndGo.vcxproj  README.md  ServerEmulator.vcxproj  Zusi3TCP.sln  index.html  params.json
doc/html/: _debug_socket_8h_source.html  _winsock_blocking_socket_8h_source.html  _zusi3_t_c_p_8h.html  _zusi3_t_c_p_8h_source.html  annotated.html  class_debug_socket-members.html  class_debug_socket.html  class_winsock_blocking_socket-members.html  class_winsock_blocking_socket.html  classes.html  classzusi_1_1_attribute-members.html  classzusi_1_1_attribute.html  classzusi_1_1_client_connection-members.html  classzusi_1_1_client_connection.html  classzusi_1_1_connection-members.html  classzusi_1_1_connection.html  classzusi_1_1_debug_socket-members.html  classzusi_1_1_debug_socket.html  classzusi_1_1_node-members.html  classzusi_1_1_node.html  classzusi_1_1_socket-members.html  classzusi_1_1_socket.html  classzusi_1_1_winsock_blocking_socket-members.html  classzusi_1_1_winsock_blocking_socket.html  dir_610fe23e36a8315c3b146b8b9bd2e9fb.html  dir_ceecc21fa5dae4f5f92c9a6afe2940bb.html  files.html  functions.html  functions_func.html  functions_vars.html  group___enumerations.html  hierarchy.html  index.html  modules.html  namespacemembers.html  namespacemembers_enum.html  namespaces.html  namespacezusi.html
sample/: dump_ftd.cpp  pfeil_and_go.cpp  server_emulator.cpp
src/: CMakeLists.txt  DebugSocket.cpp  DebugSocket.h  WinsockBlockingSocket.cpp  WinsockBlockingSocket.h  Zusi3TCP.cpp  Zusi3TCP.h  Zusi3TCPCli.cpp  serverconnection.cpp
src/include/: WinsockBlockingSocket.h  Zusi3TCP.h  Zusi3TCPData.h  Zusi3TCPTypes.h  serverconnection.h
test/: CMakeLists.txt  main.cpp
